# Quantum-Simulator

./: CMakeLists.txt  PSI(0).txt  complex_expm.cu  complex_expm_1.cu  complex_expm_batch_1.cu  compute_Hamiltonians.c  compute_Hamiltonians.cu  expm.h  expm_batched_A1.cu  expm_batched_A2.cu  expm_batched_A4.cu  expm_batched_A5.cu  expm_c.c  expm_matlab.m  expm_mul  expm_mulWithCuda.c  expm_mulwithCuda2.c  expm_mulwithCuda2.cu  expm_single.cu  first.py  full_hamiltonian_simulation.py  main  main.c  main.c.save  mul_compare.cu  mul_compare_single.cu  mul_test.cu  network.txt  reduced.cu  reduced_simulation.py  reformed_1.cu  single_excitation_simulation.py
Cuda_batch_expm/: Bulk_Results_Cuda.txt  Bulk_batch_test  ERROR.c  ERROR.cu  expm_batched.c  expm_batched.cu  test.py
Cuda_single_expm/: Bulk_Results_Cuda.txt  Bulk_serial_test  expm_single.c  expm_single.cu  test.py
Dummy Cuda Wrapper/: Library_Creation_Command.txt  new.cu  tester.py
Serial_expm/: compile_instructions.txt  serial_C_vs_numpy.py  serial_expm_linked.c
cuEXPM/: cuEXPM.cu
